fix padding height on mobile

--- a/src/styles/base/_breakpoints.scss
+++ b/src/styles/base/_breakpoints.scss
@@ -48,7 +48,7 @@
       transform-origin: top center;
       width: auto;
       height: auto;
-      padding: $small-spacing;
+      padding: $base-spacing $small-spacing;
     }
   }
 }
